fixed alignment issues

--- a/src/styles/components/hero.scss
+++ b/src/styles/components/hero.scss
@@ -23,10 +23,11 @@
         grid-template-columns: 1fr;
         gap: 1rem;
         justify-content: center;
+        align-items: center;
 
         @include respondto('lg') {
             grid-template-columns: repeat(2, 1fr);
-            gap: 1.875rem;
+            gap: 2rem;
         }
 
         & > h1 {
@@ -47,7 +48,7 @@
             gap: 1.5rem;
 
             @include respondto('lg') {
-                gap: 1.8125rem;
+                gap: 1.81rem;
             }
 
             & > p {
